fix(?) for overflow in widget

--- a/packages/route_widget/scss/main.scss
+++ b/packages/route_widget/scss/main.scss
@@ -34,7 +34,7 @@
       position: fixed;
       top: 0;
       left: 0;
-      overflow: scroll;
+      height: 100vh;
       .MODE__mobile__expand_button_container {
         position: fixed;
         right: 15px;
